Add holdings record properties non breaking (#326)
* Add new holdings properties, details accordion UIIN-234

* Add properties, holdings form, details accordion UIIN-234

* Add ID properties, holdings view UIIN-232

* Add electronic access properties, holdings view UIIN-236

* Add electronic access properties to holdings form UIIN-236

* Add properties holdings view, locations accordion UIIN-233

* Add properties, holdings form, locations accordion UIIN-233

* Add properties, holdings form and view, administrative data UIIN-232

* Add properties, holdings view and form, notes accordion UIIN-235

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -65,7 +65,16 @@
   "selectPlatform": "Select platform",
   "platform": "Platform",
   "uri": "URI",
+  "shelvingOrder": "Shelving order",
+  "shelvingTitle": "Shelving title",
+  "holdingsCallNumber": "Holdings call number",
+  "copyNumber": "Copy number",
+  "callNumberType": "Call number type",
+  "callNumberPrefix": "Call number prefix",
   "callNumber": "Call number",
+  "callNumberSuffix": "Call number suffix",
+  "holdingsNotes": "Holdings notes",
+  "publicNote": "Public note",
   "identifier": "Identifier",
   "identifiers": "Identifiers",
   "addIdentifier": "+ Add identifier",
@@ -129,6 +138,7 @@
   "materialType": "Material type",
   "holdingsHeader": "Holdings: {location} > {callNumber}",
   "holdingsDetails": "Holdings details",
+  "numberOfItems": "Number of items",
   "acquisitions": "Acquisitions",
   "receivingHistory": "Receiving history",
   "viewHoldings": "View holdings",
@@ -137,10 +147,32 @@
   "holdingsData": "Holdings data",
   "holdingsId": "Holdings ID",
   "holdingsHrid": "Holdings HRID",
+  "formerHoldingsId": "Former holdings ID",
   "holdingsStatement": "Holdings statement",
   "holdingsStatements": "Holdings statements",
+  "holdingsStatementForIndexes": "Holdings statement for indexes",
+  "holdingsStatementsForIndexes": "Holdings statements for indexes",
+  "holdingsStatementForIndexesNote": "Holdings statement for indexes note",
+  "holdingsStatementsForIndexesNote": "Holdings statements for indexes notes",
+  "holdingsStatementForSupplements": "Holdings statement for supplements",
+  "holdingsStatementsForSupplements": "Holdings statements for supplements",
+  "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
+  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes", 
   "removeStatement": "Remove statement {num}",
   "deleteStatement": "Delete statement",
+  "noteType": "Note type",
+  "staffOnly": "Staff only",
+  "publicNote": "Public note",
+  "nonPublicNote": "Nonpublic note",
+  "actionNote": "Action note",
+  "reproductionNote": "Reproduction note",
+  "binding": "Binding",
+  "provenance": "Provenance",
+  "copyNotes": "Copy notes",
+  "receiptStatus": "Receipt status",
+  "acquisitionMethod": "Acquisition method",
+  "acquisitionFormat": "Acquisition format",
+  "electronicBookplate": "Electronic bookplate",
   "editHoldingsRecordDialog": "Edit holdings record dialog",
   "copyHoldingsRecordDialog": "Copy holdings record dialog",
   "createHoldingsRecord": "Create new holdings record",
@@ -204,7 +236,6 @@
   "administrativeData": "Administrative data",
   "itemNotes": "Item notes",
   "itemCallNumber": "Item call number",
-  "holdingsNotes": "Holdings notes",
   "otherRelatedInstances": "Other related instances",
   "instanceRelationships": "Instance relationships",
   "copyItem": "Copy item"
