Align widths of instance and holdings forms UIIN-363
  Tweak field layouts, widths and labels.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -15,6 +15,7 @@
   "item.availability.dueDate": "Due date",
   "fillIn": "Please fill this in to continue",
   "selectToContinue": "Please select to continue",
+  "add": "+ Add",
   "onePublicationFieldToContinue": "Please fill in one or more publication fields to continue",
   "barcodeTaken": "This barcode has already been taken",
   "hridTaken": "This HRID has already been taken",
@@ -148,14 +149,18 @@
   "holdingsId": "Holdings ID",
   "holdingsHrid": "Holdings HRID",
   "formerHoldingsId": "Former holdings ID",
+  "addFormerHoldingsId": "+ Add former holdings ID",
   "holdingsStatement": "Holdings statement",
   "holdingsStatements": "Holdings statements",
+  "addHoldingsStatement": "+ Add holdings statement",
   "holdingsStatementForIndexes": "Holdings statement for indexes",
   "holdingsStatementsForIndexes": "Holdings statements for indexes",
+  "addHoldingsStatementForIndexes": "+ Add holdings statement for indexes",
   "holdingsStatementForIndexesNote": "Holdings statement for indexes note",
   "holdingsStatementsForIndexesNote": "Holdings statements for indexes notes",
   "holdingsStatementForSupplements": "Holdings statement for supplements",
   "holdingsStatementsForSupplements": "Holdings statements for supplements",
+  "addHoldingsStatementForSupplements": "+ Add holdings statement for supplements",
   "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
   "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes", 
   "removeStatement": "Remove statement {num}",
