Change label, related instances accordion UIIN-273

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -242,6 +242,6 @@
   "itemNotes": "Item notes",
   "itemCallNumber": "Item call number",
   "otherRelatedInstances": "Other related instances",
-  "instanceRelationships": "Instance relationships",
+  "relatedInstances": "Related instances",
   "copyItem": "Copy item"
 }
