add accordions to edit item page, refs UIIN-275

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -14,6 +14,7 @@
   "item.availability.loanDate": "Loan date",
   "item.availability.dueDate": "Due date",
   "fillIn": "Please fill this in to continue",
+  "conditions": "Conditions",
   "selectToContinue": "Please select to continue",
   "add": "+ Add",
   "onePublicationFieldToContinue": "Please fill in one or more publication fields to continue",
@@ -104,6 +105,10 @@
   "loanTypePermanent": "Loan type (permanent)",
   "barcode": "Barcode",
   "itemBarcode": "Item barcode",
+  "accessionNumber": "Accession number",
+  "itemIdentifier": "Item identifier",
+  "formerItemIdentifier": "Former identifier",
+  "addFormerItemIdentifier": "+ Add former Item id",
   "status": "Status",
   "loanTypeTemporary": "Loan type (temporary)",
   "enumeration": "Enumeration",
@@ -162,7 +167,7 @@
   "holdingsStatementsForSupplements": "Holdings statements for supplements",
   "addHoldingsStatementForSupplements": "+ Add holdings statement for supplements",
   "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
-  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes", 
+  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes",
   "removeStatement": "Remove statement {num}",
   "deleteStatement": "Delete statement",
   "noteType": "Note type",
