Add accordions to Item form page, refs UIIN-275

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -162,7 +162,7 @@
   "holdingsStatementsForSupplements": "Holdings statements for supplements",
   "addHoldingsStatementForSupplements": "+ Add holdings statement for supplements",
   "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
-  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes", 
+  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes",
   "removeStatement": "Remove statement {num}",
   "deleteStatement": "Delete statement",
   "noteType": "Note type",
@@ -209,6 +209,7 @@
   "contributor": "Contributor",
   "publisher": "Publisher",
   "publisherRole": "Publisher role",
+  "conditions": "Conditions",
   "place": "Place",
   "date": "Date",
   "dateOfPublication": "Date of publication",
