Add URL relationship to the Inventory settings page, refs UIIN-301
- Added a new setting under Inventory -> Instances, Holdings, Item
- Uses the ControlledVocab component to achieve the necessary ops.
- translations

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -131,6 +131,7 @@
   "urls": "URLs",
   "addUrl": "+ Add URL",
   "items": "Items",
+  "instanceHoldingsItem": "Instances, Holdings, Items",
   "addNewItemDialog": "Add new item dialog",
   "loanTypes": "Loan types",
   "loanType": "Loan type",
@@ -162,7 +163,7 @@
   "holdingsStatementsForSupplements": "Holdings statements for supplements",
   "addHoldingsStatementForSupplements": "+ Add holdings statement for supplements",
   "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
-  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes", 
+  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes",
   "removeStatement": "Remove statement {num}",
   "deleteStatement": "Delete statement",
   "noteType": "Note type",
@@ -201,6 +202,8 @@
   "electronicAccess": "Electronic access",
   "addElectronicAccess": "+ Add electronic access",
   "urlRelationship": "Relationship",
+  "URLrelationship": "URL Relationship",
+  "urlRelationshipTerm": "URL Relationship term",
   "linkText": "Link text",
   "urlPublicNote": "URL public note",
   "materialsSpecification": "Materials specified",
