- Update package json with perms - Translations -

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -163,7 +163,7 @@
   "holdingsStatementsForSupplements": "Holdings statements for supplements",
   "addHoldingsStatementForSupplements": "+ Add holdings statement for supplements",
   "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
-  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes", 
+  "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes",
   "removeStatement": "Remove statement {num}",
   "deleteStatement": "Delete statement",
   "noteType": "Note type",
@@ -239,6 +239,8 @@
   "confirmLocation.header": "Inactive location",
   "contributorType": "Contributor type",
   "contributorTypes": "Contributor types",
+  "instanceStatusTypes": "Instance status types",
+  "instanceStatusType": "Instance status type",
   "administrativeData": "Administrative data",
   "itemNotes": "Item notes",
   "itemCallNumber": "Item call number",
