Add URL relationship to the Inventory settings page, refs UIIN-301 (#338)
* Add URL relationship to the Inventory settings page, refs UIIN-301

- Added a new setting under Inventory -> Instances, Holdings, Item
- Uses the ControlledVocab component to achieve the necessary ops.
- translations

* add electronic access relationship permission to package.json, refs UIIN-301

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -132,6 +132,7 @@
   "urls": "URLs",
   "addUrl": "+ Add URL",
   "items": "Items",
+  "instanceHoldingsItem": "Instances, Holdings, Items",
   "addNewItemDialog": "Add new item dialog",
   "loanTypes": "Loan types",
   "loanType": "Loan type",
@@ -202,6 +203,8 @@
   "electronicAccess": "Electronic access",
   "addElectronicAccess": "+ Add electronic access",
   "urlRelationship": "Relationship",
+  "URLrelationship": "URL Relationship",
+  "urlRelationshipTerm": "URL Relationship term",
   "linkText": "Link text",
   "urlPublicNote": "URL public note",
   "materialsSpecification": "Materials specified",
