Modify the copy and edit labels in inventory, refs UIIN-354

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -249,5 +249,7 @@
   "itemCallNumber": "Item call number",
   "otherRelatedInstances": "Other related instances",
   "relatedInstances": "Related instances",
-  "copyItem": "Copy item"
+  "copyItem": "Copy item",
+  "edit": "Edit",
+  "duplicate": "Duplicate"
 }
