Revert "Modify the copy and edit labels in inventory, refs UIIN-354 (#342)"
This reverts commit a0ba7da69a34dcf2dd12c4062c5b235938436dd8.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -249,7 +249,5 @@
   "itemCallNumber": "Item call number",
   "otherRelatedInstances": "Other related instances",
   "relatedInstances": "Related instances",
-  "copyItem": "Copy item",
-  "edit": "Edit",
-  "duplicate": "Duplicate"
+  "copyItem": "Copy item"
 }
