STCOM-353: Implement Pane header dropdown on Instance and Holdings Detail Recods

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -22,7 +22,9 @@
   "createInstance": "Create instance",
   "updateInstance": "Update instance",
   "itemRecord": "Item record",
-  "copyInstance": "Copy instance",
+  "duplicateInstance": "Duplicate instance",
+  "cancel": "Cancel",
+  "newInstance": "New instance",
   "editInstance": "Edit instance",
   "instanceDetails": "Instance details",
   "addHoldings": "+ Add holdings",
@@ -198,7 +200,7 @@
   "copyHoldingsRecordDialog": "Copy holdings record dialog",
   "createHoldingsRecord": "Create new holdings record",
   "updateHoldingsRecord": "Update holdings record",
-  "copyHolding": "Copy holding",
+  "duplicateHoldings": "Duplicate holdings",
   "editHoldings": "Edit holdings",
   "instanceData": "Administrative data",
   "instanceId": "Instance ID",
