Holding types settings page, refs UIIN-376

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -30,6 +30,9 @@
   "instances": "Instances",
   "instance": "Instance:",
   "holdings": "Holdings",
+  "holdingsType": "Holdings type",
+  "holdingsTypes": "Holdings types",
+  "ILLPolicy": "ILL policy",
   "holdingsColon": "Holdings:",
   "staffSuppress": "Staff suppress",
   "discoverySuppress": "Suppress from discovery",
