add alternative title types settings to inventory settings, refs UIIN-362

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -138,6 +138,8 @@
   "loanType": "Loan type",
   "loans": "Loans",
   "materialTypes": "Material types",
+  "alternativeTitleTypes": "Alternative Title Types",
+  "alternativeTitleType": "Alternative Title Type",
   "materialType": "Material type",
   "holdingsHeader": "Holdings: {location} > {callNumber}",
   "holdingsDetails": "Holdings details",
