Call number types settings page, refs UIIN-378 (#357)
* Call number types settings page, refs UIIN-378

* update perms description, refs UIIN-378

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -135,6 +135,8 @@
   "addUrl": "+ Add URL",
   "items": "Items",
   "instanceHoldingsItem": "Instances, Holdings, Items",
+  "callNumberTypes": "Call number types",
+  "holdingsItems": "Holdings, Items",
   "addNewItemDialog": "Add new item dialog",
   "loanTypes": "Loan types",
   "loanType": "Loan type",
