Add four reference tables, refactor holding note type (wip)
 - alternativeTitleTypes
 - illPolicies
 - holdingsTypes
 - callNumberTypes
 - holdingsNoteTypes

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -159,6 +159,7 @@
   "holdingsData": "Holdings data",
   "holdingsId": "Holdings ID",
   "holdingsHrid": "Holdings HRID",
+  "holdingsType": "Holdings type",
   "formerHoldingsId": "Former holdings ID",
   "addFormerHoldingsId": "+ Add former holdings ID",
   "holdingsStatement": "Holdings statement",
@@ -174,6 +175,7 @@
   "addHoldingsStatementForSupplements": "+ Add holdings statement for supplements",
   "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
   "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes",
+  "illPolicy": "ILL policy",
   "digitizationPolicy": "Digitization policy",
   "retentionPolicy": "Retention policy",
   "removeStatement": "Remove statement {num}",
