--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -103,6 +103,7 @@
   "selectMaterialType": "Select material type",
   "selectLoanType": "Select loan type",
   "loanTypePermanent": "Loan type (permanent)",
+  "loanTypePermanentRequired": "Loan type (permanent) *",
   "barcode": "Barcode",
   "itemBarcode": "Item barcode",
   "status": "Status",
@@ -139,6 +140,7 @@
   "loans": "Loans",
   "materialTypes": "Material types",
   "materialType": "Material type",
+  "materialTypeRequired": "Material type *",
   "holdingsHeader": "Holdings: {location} > {callNumber}",
   "holdingsDetails": "Holdings details",
   "numberOfItems": "Number of items",
@@ -171,7 +173,6 @@
   "deleteStatement": "Delete statement",
   "noteType": "Note type",
   "staffOnly": "Staff only",
-  "publicNote": "Public note",
   "nonPublicNote": "Nonpublic note",
   "actionNote": "Action note",
   "reproductionNote": "Reproduction note",
