--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -108,6 +108,7 @@
   "selectMaterialType": "Select material type",
   "selectLoanType": "Select loan type",
   "loanTypePermanent": "Loan type (permanent)",
+  "loanTypePermanentRequired": "Loan type (permanent) *",
   "barcode": "Barcode",
   "itemBarcode": "Item barcode",
   "status": "Status",
@@ -148,6 +149,7 @@
   "alternativeTitleTypes": "Alternative Title Types",
   "alternativeTitleType": "Alternative Title Type",
   "materialType": "Material type",
+  "materialTypeRequired": "Material type *",
   "holdingsHeader": "Holdings: {location} > {callNumber}",
   "holdingsDetails": "Holdings details",
   "numberOfItems": "Number of items",
@@ -182,7 +184,6 @@
   "deleteStatement": "Delete statement",
   "noteType": "Note type",
   "staffOnly": "Staff only",
-  "publicNote": "Public note",
   "nonPublicNote": "Nonpublic note",
   "actionNote": "Action note",
   "reproductionNote": "Reproduction note",
