Removed actionMenuItems-prop from ViewItem. Replaced with actionMenu-prop. Added missing translation string for 'Edit item'.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -238,6 +238,7 @@
   "editInstanceDialog": "Edit instance dialog",
   "addNewHoldingsDialog": "Add new holdings dialog",
   "addItem": "+ Add item",
+  "editItem": "Edit item",
   "viewItem": "View item",
   "viewSource": "View source",
   "itemData": "Item data",
