Fix the casing in translations, refs UIIN-301

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -217,7 +217,7 @@
   "electronicAccess": "Electronic access",
   "addElectronicAccess": "+ Add electronic access",
   "urlRelationship": "Relationship",
-  "URLrelationship": "URL Relationship",
+  "URLrelationship": "URL relationship",
   "urlRelationshipTerm": "URL Relationship term",
   "linkText": "Link text",
   "urlPublicNote": "URL public note",
