translations, refs UIIN-362

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -146,8 +146,8 @@
   "loanType": "Loan type",
   "loans": "Loans",
   "materialTypes": "Material types",
-  "alternativeTitleTypes": "Alternative Title Types",
-  "alternativeTitleType": "Alternative Title Type",
+  "alternativeTitleTypes": "Alternative title types",
+  "alternativeTitleType": "Alternative title type",
   "materialType": "Material type",
   "materialTypeRequired": "Material type *",
   "holdingsHeader": "Holdings: {location} > {callNumber}",
