--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -161,7 +161,6 @@
   "holdingsData": "Holdings data",
   "holdingsId": "Holdings ID",
   "holdingsHrid": "Holdings HRID",
-  "holdingsType": "Holdings type",
   "formerHoldingsId": "Former holdings ID",
   "addFormerHoldingsId": "+ Add former holdings ID",
   "holdingsStatement": "Holdings statement",
@@ -238,6 +237,7 @@
   "editInstanceDialog": "Edit instance dialog",
   "addNewHoldingsDialog": "Add new holdings dialog",
   "addItem": "+ Add item",
+  "editItem": "Edit item",
   "viewItem": "View item",
   "viewSource": "View source",
   "itemData": "Item data",
