Add copyItem translation string

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -251,6 +251,7 @@
   "removeIdentifier": "Remove identifier {num}",
   "editItemDialog": "Edit item dialog",
   "copyItemDialog": "Copy item dialog",
+  "copyItem": "Copy item",
   "confirmLocation.selectBtn": "Select",
   "confirmLocation.message": "This location has a status of inactive. Are you sure you want to select this location?",
   "confirmLocation.header": "Inactive location",
