Adapt to new structure for alternative titles UIIN-345

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -39,6 +39,7 @@
   "staffSuppress": "Staff suppress",
   "discoverySuppress": "Suppress from discovery",
   "previouslyHeld": "Previously held",
+  "alternativeTitle": "Alternative title",
   "alternativeTitles": "Alternative titles",
   "addAlternativeTitles": "+ Add alternative title",
   "classifications": "Classifications",
