Rename `pieceIdentifiers` to `copyNumbers` UIIN-397

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -247,9 +247,10 @@
   "itemHrid": "Item HRID",
   "permanentLoantype": "Permanent loantype",
   "temporaryLoantype": "Temporary loantype",
-  "pieceIdentifier": "Piece identifier",
-  "pieceIdentifiers": "Copy number",
-  "addPieceIdentifier": "Add piece identifier",
+  "copyNumber": "Copy number",
+  "copyNumbers": "Copy numbers",
+  "addCopyNumber": "Add copy number",
+  "removeCopyNumbre": "Remove copy number {num}",
   "removeIdentifier": "Remove identifier {num}",
   "editItemDialog": "Edit item dialog",
   "copyItemDialog": "Copy item dialog",
