New settings page for Statistical codes and Statistical code names, refs UIIN-385

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -22,6 +22,7 @@
   "createInstance": "Create instance",
   "updateInstance": "Update instance",
   "itemRecord": "Item record",
+  "code": "code",
   "duplicateInstance": "Duplicate instance",
   "cancel": "Cancel",
   "newInstance": "New instance",
@@ -67,7 +68,11 @@
   "permanent": "Permanent",
   "temporary": "Temporary",
   "selectPermanenLocation": "Select permanent location",
+  "statisticalCodes": "Statistical codes",
+  "statisticalCode": "Statistical code",
+  "statisticalCodeNames": "Statistical code names",
   "statisticalCodeTypes": "Statistical code types",
+  "selectStatisticalCode": "Select statistical code type",
   "statisticalCodeType": "Statistical code type",
   "selectTemporaryLocation": "Select temporary location",
   "selectLocation": "Select location",
