fix casing in translations, refs UIIN-301

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -224,7 +224,7 @@
   "addElectronicAccess": "+ Add electronic access",
   "urlRelationship": "Relationship",
   "URLrelationship": "URL relationship",
-  "urlRelationshipTerm": "URL Relationship term",
+  "urlRelationshipTerm": "URL relationship term",
   "linkText": "Link text",
   "urlPublicNote": "URL public note",
   "materialsSpecification": "Materials specified",
