Add accordions to Item form page, refs UIIN-275 (#335)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -233,6 +233,7 @@
   "contributor": "Contributor",
   "publisher": "Publisher",
   "publisherRole": "Publisher role",
+  "conditions": "Conditions",
   "place": "Place",
   "date": "Date",
   "dateOfPublication": "Date of publication",
