Partially add Item conditions, Item view and form UIIN-252

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -123,6 +123,9 @@
   "enumerationData": "Enumeration data",
   "chronology": "Chronology",
   "numberOfPieces": "Number of pieces",
+  "numberOfMissingPieces": "Number of missing pieces",
+  "missingPieces": "Missing pieces",
+  "itemDamagedStatus": "Item damaged status",
   "language": "Language",
   "languages": "Languages",
   "addLanguage": "+ Add language",
