Populate Item Enumeration accordions UIIN-251 (#397)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -135,7 +135,10 @@
   "loanTypeTemporary": "Loan type (temporary)",
   "enumeration": "Enumeration",
   "enumerationData": "Enumeration data",
+  "volume": "Volume",
   "chronology": "Chronology",
+  "yearCaption": "Year, caption",
+  "addYearCaption": "Add year, caption",
   "numberOfPieces": "Number of pieces",
   "numberOfMissingPieces": "Number of missing pieces",
   "missingPieces": "Missing pieces",
