Populate Item accordion 'Item data' UIIN-250

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -140,6 +140,7 @@
   "yearCaption": "Year, caption",
   "addYearCaption": "Add year, caption",
   "numberOfPieces": "Number of pieces",
+  "descriptionOfPieces": "Description of pieces",
   "numberOfMissingPieces": "Number of missing pieces",
   "missingPieces": "Missing pieces",
   "itemDamagedStatus": "Item damaged status",
@@ -166,6 +167,7 @@
   "items": "Items",
   "instanceHoldingsItem": "Instances, Holdings, Items",
   "callNumberTypes": "Call number types",
+  "selectCallNumberType": "Select type",
   "holdingsItems": "Holdings, Items",
   "addNewItemDialog": "Add new item dialog",
   "parentInstances": "Parent instances",
