Populate Item accordions 'Administrative data' UIIN-239
  Also: Move locations, loan types, status to their
  respective accordions.

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -127,12 +127,17 @@
   "descriptiveData": "Descriptive data",
   "selectMaterialType": "Select material type",
   "selectLoanType": "Select loan type",
-  "loanTypePermanent": "Loan type (permanent)",
-  "loanTypePermanentRequired": "Loan type (permanent) *",
+  "loanTypePermanent": "Permanent loan type",
+  "loanTypePermanentRequired": "Permanent loan type *",
   "barcode": "Barcode",
   "itemBarcode": "Item barcode",
+  "itemHrid": "Item HRID",
+  "itemIdentifier": "Item identifier",
+  "formerId": "Former identifier",
+  "addFormerId": "Add former identifier",
+  "accessionNumber": "Accession number",
   "status": "Status",
-  "loanTypeTemporary": "Loan type (temporary)",
+  "loanTypeTemporary": "Temporary loan type",
   "enumeration": "Enumeration",
   "enumerationData": "Enumeration data",
   "volume": "Volume",
