Add statistical codes to Item form and view (WiP) UIIN-239

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -243,6 +243,7 @@
   "instanceData": "Administrative data",
   "instanceId": "Instance ID",
   "instanceHrid": "Instance HRID",
+  "addStatisticalCode": "Add statistical code",
   "instanceStatus": "Instance status term",
   "selectInstanceStatus": "Select instance status",
   "modeOfIssuance": "Mode of issuance",
