Add receiving history to holdings, view and form (wip) UIIN-238

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -202,6 +202,7 @@
   "holdingsHrid": "Holdings HRID",
   "formerHoldingsId": "Former holdings ID",
   "addFormerHoldingsId": "Add former holdings ID",
+  "selectHoldingsType": "Select holdings type",
   "holdingsStatement": "Holdings statement",
   "holdingsStatementNote": "Holdings statement note",
   "holdingsStatements": "Holdings statements",
@@ -216,6 +217,9 @@
   "addHoldingsStatementForSupplements": "Add holdings statement for supplements",
   "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
   "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes",
+  "publicDisplay": "Public display",
+  "addReceivingHistory": "Add receiving history",
+  "selectIllPolicy": "Select ILL policy",
   "illPolicy": "ILL policy",
   "digitizationPolicy": "Digitization policy",
   "retentionPolicy": "Retention policy",
